--- a/templates/admin_portal/base.html
+++ b/templates/admin_portal/base.html
@@ -34,7 +34,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'residents:list' %}">
                             <i class="bi bi-people"></i> Residents
                         </a>
                     </li>
