--- a/templates/admin_portal/dashboard.html
+++ b/templates/admin_portal/dashboard.html
@@ -19,7 +19,7 @@
                 <p class="card-text">Total Residents</p>
             </div>
             <div class="card-footer">
-                <a href="#" class="text-white text-decoration-none">
+                <a href="{% url 'residents:list' %}" class="text-white text-decoration-none">
                     View All <i class="bi bi-arrow-right"></i>
                 </a>
             </div>
@@ -77,7 +77,7 @@
     <div class="col-12">
         <h4>Quick Actions</h4>
         <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action">
+            <a href="{% url 'residents:create' %}" class="list-group-item list-group-item-action">
                 <i class="bi bi-person-plus"></i> Add New Resident
             </a>
             <a href="#" class="list-group-item list-group-item-action">
