--- a/templates/admin_portal/base.html
+++ b/templates/admin_portal/base.html
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'residents:household_list' %}">
                             <i class="bi bi-house"></i> Households
                         </a>
                     </li>
